.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Candidate__c.object
<CustomObject>
    <description>Recruitment
Contains generic data on Candidate, not related to specific Applications</description>
    <fields>
        <fullName>xcdhcm__Address_1__c</fullName>
        <label>Address 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Address_2__c</fullName>
        <label>Address 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Attachment_count__c</fullName>
        <description>For jira NPPD - 568</description>
        <label>Attachment count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Candidate_status__c</fullName>
        <label>Candidate status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Notice to serve</fullName>
                </value>
                <value>
                    <fullName>Available immediately</fullName>
                </value>
                <value>
                    <fullName>Current employee</fullName>
                </value>
                <value>
                    <fullName>Previous employee</fullName>
                </value>
                <value>
                    <fullName>Do not hire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__City__c</fullName>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Current_From__c</fullName>
        <defaultValue>&quot;Enter start month and year&quot;</defaultValue>
        <label>From</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Current_employer__c</fullName>
        <label>Current employer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Current_job_title__c</fullName>
        <label>Current job title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Current_to__c</fullName>
        <defaultValue>&quot;Enter month and year if no longer with the Employer&quot;</defaultValue>
        <label>To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Date_of_birth__c</fullName>
        <label>Date of birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Email__c</fullName>
        <externalId>true</externalId>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>xcdhcm__Employee_Detail__c</referenceTo>
        <relationshipLabel>Candidates</relationshipLabel>
        <relationshipName>Candidates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__FEDates_attended__c</fullName>
        <defaultValue>&quot;MM-YY to MM-YY&quot;</defaultValue>
        <label>Dates attended</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__First_name__c</fullName>
        <label>First name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Function__c</fullName>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Further_education_establishment__c</fullName>
        <label>Further education establishment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__HR_vacancy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>JIRA - 1197
Restricts sharing for HR vacancies</description>
        <label>System: HR vacancy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Known_name__c</fullName>
        <label>Known name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Languages__c</fullName>
        <defaultValue>&quot;Please note language and level - e.g., English - mother tongue&quot;</defaultValue>
        <label>Languages</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Last_name__c</fullName>
        <label>Last name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Board</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Senior Management</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Team Leader</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Middle_name__c</fullName>
        <label>Middle name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Number_of_applications__c</fullName>
        <description>Total number of applications submitted by the candidate</description>
        <label>Number of applications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__OEDates_attended__c</fullName>
        <defaultValue>&quot;MM-YY to MM-YY&quot;</defaultValue>
        <label>Dates attended</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__OEQualifications_awarded__c</fullName>
        <defaultValue>&quot;Subject, qualification, level and date of award&quot;</defaultValue>
        <label>Qualifications awarded</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Other_education__c</fullName>
        <label>Other education</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Partnership_status__c</fullName>
        <label>Partnership status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Registered civil partnership</fullName>
                </value>
                <value>
                    <fullName>Nominated cohabiting partner</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Positions_and_achievements__c</fullName>
        <defaultValue>&quot;For each position please set out:&quot;
&amp;&quot;- Job title and Employer&quot;
&amp;&quot;- Start and end month and year&quot;
&amp;&quot;- Responsibilities and achievements&quot;</defaultValue>
        <label>Positions and achievements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Postcode__c</fullName>
        <label>Postcode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Preferred_contact_number__c</fullName>
        <label>Preferred contact number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>xcdhcm__PrevResponsibilities_and_achievements__c</fullName>
        <defaultValue>&quot;Please describe your principal responsibilities and achievements in the position&quot;</defaultValue>
        <label>Responsibilities and achievements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Previous_From__c</fullName>
        <defaultValue>&quot;Enter month and year&quot;</defaultValue>
        <label>From</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Previous_To__c</fullName>
        <defaultValue>&quot;Enter month and year&quot;</defaultValue>
        <label>To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Previous_employer__c</fullName>
        <label>Previous employer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Previous_job_title__c</fullName>
        <label>Previous job title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Profile_image__c</fullName>
        <description>JIRA - 1116</description>
        <label>Profile image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Qualifications_awarded__c</fullName>
        <defaultValue>&quot;Subject, qualification, level and date of award&quot;</defaultValue>
        <label>Qualifications awarded</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Region__c</fullName>
        <label>Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Responsibilities_and_achievements__c</fullName>
        <defaultValue>&quot;Please describe your principal responsibilities and achievements in your current position&quot;</defaultValue>
        <label>Responsibilities and achievements</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__SDates_attended__c</fullName>
        <defaultValue>&quot;MM-YY to MM-YY&quot;</defaultValue>
        <label>Dates attended</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__SQualifications_awarded__c</fullName>
        <defaultValue>&quot;Subject, qualification, level and date of award&quot;</defaultValue>
        <label>Qualifications awarded</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Salutation__c</fullName>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr</fullName>
                </value>
                <value>
                    <fullName>Miss</fullName>
                </value>
                <value>
                    <fullName>Mrs</fullName>
                </value>
                <value>
                    <fullName>Ms</fullName>
                </value>
                <value>
                    <fullName>Doctor</fullName>
                </value>
                <value>
                    <fullName>Professor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__School_or_college__c</fullName>
        <label>School or college</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Skills_qualifications__c</fullName>
        <defaultValue>&quot;Please describe your key skills&quot;</defaultValue>
        <label>Skills/qualifications</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Candidate Database</label>
    <listViews>
        <fullName>xcdhcm__Candidates</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__First_name__c</columns>
        <columns>xcdhcm__Last_name__c</columns>
        <columns>xcdhcm__Email__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>Candidates</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Candidate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Database</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>xcdhcm__Authorising_manager__c</fullName>
        <label>Authorising manager</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>xcdhcm__Finance_approver__c</fullName>
        <label>Finance_approver</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>xcdhcm__Hiring_manager__c</fullName>
        <label>Hiring manager</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>xcdhcm__Interviewer__c</fullName>
        <label>Interviewer</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>xcdhcm__PA__c</fullName>
        <label>PA</label>
    </sharingReasons>
</CustomObject>